# webflow-agent-kit

./: .gitignore  BUILD_LOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES-beta.1.md  eslint.config.mjs  integration-test-readonly.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-node-pnpm/: action.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: authentication.md  blog-post.md  ci-cd.md  compatibility.md  dependency-compatibility.md  framework-adapters.md  getting-started.md  production-readiness-plan.md  python-status.md  rate-limiting.md  releasing.md  safety-and-mutations.md  testing.md  tool-reference.md  troubleshooting.md
docs-site/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
docs-site/src/content/docs/clients/: cursor.md  gemini-cli.md  kiro.md  windsurf.md
docs/clients/: claude-code.md  claude-desktop.md  codex-cli.md  generic-mcp.md
examples/cli-quickstart/: README.md
examples/langchain-agent/: .env.example  CHANGELOG.md  package.json
examples/langchain-agent/src/: index.ts
examples/mcp-claude-desktop/: README.md  config.json
examples/vercel-ai-agent/: CHANGELOG.md  README.md  package.json
examples/vercel-ai-agent/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
examples/vercel-ai-agent/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
examples/vercel-ai-agent/.next/server/: middleware-build-manifest.js  server-reference-manifest.json
examples/vercel-ai-agent/app/: globals.css  layout.tsx
examples/vercel-ai-agent/app/components/: Chat.tsx
examples/vercel-ai-agent/src/: index.ts
scripts/: package-smoke.mjs
skill-packs/content-migration/: README.md
skill-packs/ecommerce-sync/: README.md
skill-packs/publish-workflow/: README.md  skill.yaml
skill-packs/publish-workflow/prompts/: system.md
skill-packs/publish-workflow/src/: index.ts
skill-packs/seo-audit/: README.md  skill.yaml
skill-packs/seo-audit/prompts/: system.md
skill-packs/seo-audit/src/: index.ts
webflow-agent-kit-python/: .gitignore  README.md  pyproject.toml
webflow-agent-kit-python/tests/: test_package.py
webflow-agent-kit-python/webflow_agent_kit/: __init__.py  client.py  tools.py
(+44 files in other folders)
