[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webflow-agent-kit"
version = "0.0.1"
description = "Python bindings for webflow-agent-kit — Webflow Data API tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anil Pervaiz", email = "hello@anilpervaiz.com"},
]
keywords = ["webflow", "ai-agent", "openai", "langchain", "crewai", "mcp"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai-agents>=0.1.0"]
langchain = ["langchain-core>=0.3.0"]
crewai = ["crewai>=0.1.0"]

[project.urls]
Homepage = "https://github.com/anilpervaiz/webflow-agent-kit"
