[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webflow-agent-kit-python"
version = "0.0.1"
description = "EXPERIMENTAL: Python package for webflow-agent-kit. Use the TypeScript packages for production."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anil Pervaiz", email = "hello@anilpervaiz.com"},
]
keywords = ["webflow", "ai-agent", "mcp", "experimental"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.15",
    "build>=1.0",
    "twine>=6.0",
]

[project.urls]
Homepage = "https://github.com/anilandcode/webflow-agent-kit"

[tool.hatch.build.targets.wheel]
packages = ["webflow_agent_kit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
